# kloigos

./: .env.example  404.html  CODEMAP.md  LICENSE-ENTERPRISE  Makefile  README.md  index.html  inventory.yaml  kloigos.sql  mkdocs.yaml  pyproject.toml
.github/workflows/: docs-build.yml
about/: index.html
api/: index.html
css/: extra.css
docs/: about.md  api.md  index.md  product-positioning.md  use-case.md
docs/architecture/: index.html
docs/auth/: index.html
docs/css/: extra.css
docs/deployment/: index.html
docs/docs/: architecture.md  auth.md  deployment.md  getting-started.md  installation.md  playbooks.md  server-preparation.md
docs/getting-started/: index.html
docs/installation/: index.html
docs/playbooks/: index.html
docs/server-preparation/: index.html
examples/: clean_up.yaml  cluster555.simple.ini  fab8.simple.ini  install.yaml  upgrade.yaml
kloigos/: README.md  __init__.py  auth.py  cli.py  dep.py  hooks.py  main.py  models.py  util.py
kloigos/api/: admin.py  allocation.py  compute_unit.py
kloigos/api/admin/: __init__.py  api_keys.py  events.py  ip_pool.py  license.py  playbooks.py  servers.py  settings.py
kloigos/enterprise/: README.md  auth.py
kloigos/repos/: __init__.py  base.py  postgres.py  sqlite.py
kloigos/resources/database/: ddl.sql
kloigos/resources/playbooks/: ALLOCATION_CREATE.yaml  ALLOCATION_DELETE.yaml  ALLOCATION_SCALE.yaml  SERVER_DECOMM.yaml  SERVER_INIT.yaml  SSH_CREDENTIAL_CLEANUP.yaml  SSH_CREDENTIAL_PREPARE.yaml
kloigos/routers/: admin.py  compute_unit.py
kloigos/services/: admin.py  allocation.py  compute_unit.py
kloigos/services/admin/: __init__.py  api_keys.py  base.py  events.py  ip_pool.py  license.py  playbooks.py  (+2 more)
kloigos/templates/: dashboard.html
kloigos/webapp/: extension.css  extension.html  extension.js
kloigos/workers/: __init__.py  health.py  license.py
product-positioning/: index.html
resources/: README.md  allocate.yaml  clean_up.yaml  cluster555.simple.ini  create.yaml  cu_allocate.yaml  deallocate.yaml  decommission.yaml  init.yaml  install.yaml  kloigos.sql  server_decomm.yaml  server_init.yaml  upgrade.yaml
resources/database/: ddl.sql
resources/database_schemas/: postgres.sql
resources/playbooks/: allocation_scale.yaml  cu_allocate.yaml  cu_deallocate.yaml  server_decomm.yaml  server_init.yaml
scripts/: reencrypt_api_key_secrets.py
search/: search_index.json
tools/: codemap.py  generate_codemap.py  license.jwt  license.md  license.py  license.yaml  license_public_key.pem  license_secret_key.pem  provision_ec2_instance.yaml  reencrypt_api_key_secrets.py  test_client.sh
use-case/: index.html
webapp/: README.md  extension.css  extension.html  extension.js  index.html  script.js  style.css
(+3 files in other folders)
