[project]
name = "kloigos"
version = "0.3.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.124.3,<0.125.0)",
    "ansible-runner (>=2.4.2,<3.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "systemd-python (>=235,<236) ; sys_platform == \"linux\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"

