[project]
name = "kloigos"
version = "0.4.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cpkit @ git+https://github.com/fabiog1901/cpkit.git@main",
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocs-click = "^0.9.0"

[tool.black]
target-version = ["py314"]

[tool.isort]
profile = "black"
