[project]
name = "kloigos"
version = "0.4.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "PyJWT (>=2.10.1,<3.0.0)",
    "PyYAML (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pgembed (>=0.2.0,<0.3.0)",
    "cpkit @ git+https://github.com/fabiog1901/cpkit.git@main"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocs-click = "^0.9.0"

[tool.poetry]
include = [
    { path = "kloigos/resources/database/ddl.sql", format = ["sdist", "wheel"] },
    { path = "kloigos/webapp/**/*", format = ["sdist", "wheel"] },
]

[project.scripts]
kloigos = "kloigos.cli:main"

[tool.cpkit]
app_import = "kloigos.main:app"
db_url_env = "KLOIGOS_DB_URL"
ddl = [
    "kloigos/resources/database/ddl.sql",
]
schema_checks = [
    "public.servers",
    "public.compute_units",
]

[tool.black]
target-version = ["py314"]

[tool.isort]
profile = "black"
